@@ -20,7 +20,7 @@
  * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
  * KIND, either express or implied.
  *
- * $Id: urldata.h,v 1.176 2003-09-11 22:21:11 bagder Exp $
+ * $Id: urldata.h,v 1.177 2003-09-19 12:56:24 bagder Exp $
  ***************************************************************************/
 
 /* This file is for lib internal stuff */
@@ -86,8 +86,13 @@
 #include <zlib.h> 		/* for content-encoding */
 #endif
 
-#ifdef GSSAPI
+#ifdef HAVE_GSSAPI
+#ifdef HAVE_GSSMIT
+#include <gssapi/gssapi.h>
+#include <gssapi/gssapi_generic.h>
+#else
 #include <gssapi.h>
+#endif
 #endif
 
 #ifdef USE_ARES
@@ -184,7 +189,7 @@ struct ntlmdata {
   unsigned char nonce[8];
 };
 
-#ifdef GSSAPI
+#ifdef HAVE_GSSAPI
 struct negotiatedata {
   bool gss; /* Whether we're processing GSS-Negotiate or Negotiate */
   const char* protocol; /* "GSS-Negotiate" or "Negotiate" */
@@ -688,7 +693,7 @@ struct UrlState {
 
   struct digestdata digest;
 
-#ifdef GSSAPI
+#ifdef HAVE_GSSAPI
   struct negotiatedata negotiate;
 #endif
 
